--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
       <section id="main_content" class="inner">
         <hr/><h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>PCF219 : LCD controllers/drivers</h3><hr/>
-<p>Le PCF2119 est un circuit intégré destiné à la commande des matrices de points 5x8 des lcd 2x16 ou 1x32 via un bus I2C </p>
+<p>Le PCF2119 est un circuit intégré destiné à la commande des matrices de points 5x8 des lcd 2x16 ou 1x32 via un bus I2C.</p>
+<ul>
+  <li>Exemple : Afficheur Midas </li>
+  <img src="http://fr.farnell.com/productimages/farnell/standard/2342652-40.jpg" />
+</ul>
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
