--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <ul>
   <li><strong>Exemple : Afficheur MIDAS - MC21605E6W-SPTLYI - LCD 2X16 STN LED B/L Y/VERT I2C I/F</strong></li>
   <img src="http://fr.farnell.com/productimages/farnell/standard/2342652-40.jpg" />
+  <p>Il peut être utiliser pour interfacer des Led ou des boutons-poussoir comme dans l'exemple ci-dessous.</p>
 </ul>
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
