--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
   <img src="http://fr.farnell.com/productimages/farnell/standard/2342652-40.jpg" />
   <p>Il peut être utiliser pour interfacer des Led ou des boutons-poussoir comme dans l'exemple ci-dessous.</p>
 </ul>
+
+<hr/>
+ <h3>Exemple d'IHM</h3>
+ <p><img src="https://lh5.googleusercontent.com/f3gmEOrYLfdhlzekaLnlQfJzibKGl0s-_dm_A1-Vuqo=w209-h207-p-no" width="50%" height="50%"></p>
+<p>Les huit Leds et les huit boutons-poussoir sont commandés par deux PCF8574.</p> 
+<hr/>
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
