--- a/index.html
+++ b/index.html
@@ -37,14 +37,36 @@
 <ul>
   <li><strong>Exemple : Afficheur MIDAS - MC21605E6W-SPTLYI - LCD 2X16 STN LED B/L Y/VERT I2C I/F</strong></li>
   <img src="http://fr.farnell.com/productimages/farnell/standard/2342652-40.jpg" />
-  <p>Il peut être utiliser pour interfacer des Led ou des boutons-poussoir comme dans l'exemple ci-dessous.</p>
+  <p>Il peut être utiliser comme dans l'exemple ci-dessous.</p>
 </ul>
-
 <hr/>
  <h3>Exemple d'IHM</h3>
  <p><img src="https://lh5.googleusercontent.com/f3gmEOrYLfdhlzekaLnlQfJzibKGl0s-_dm_A1-Vuqo=w209-h207-p-no" width="50%" height="50%"></p>
 <p>Les huit Leds et les huit boutons-poussoir sont commandés par deux PCF8574.</p> 
 <hr/>
+<h3>
+<a name="carte-netduino-de-secret-labs" class="anchor" href="#carte-netduino-de-secret-labs" target="_blank"><span class="octicon octicon-link"></span></a>Carte NetDuino plus 2 </h3><h5>Secret Labs</h5>
+<hr>
+<ul>
+<li>
+<strong>Microcontrôleur</strong> : STM32F405RG 32 bits à architecture Cortex-M4 cadencé à 168 MHz.</li>
+<li>
+<strong>RAM</strong> : 100 KB.</li>
+<li>
+<strong>Flash</strong> : 384 KB.</li>
+<li>
+<strong>Port Ethernet</strong> 10Mbps.</li>
+<li>
+<strong>E/S numériques</strong> : 14</li>
+<li>
+<strong>Entrées analogiques</strong> : 6</li>
+<li>
+<strong>IDE</strong> : Microsoft Visual Studio (professionnel ou express)</li>
+<li>
+<strong>Framework</strong> : micro framework .NET (NETMF)</li>
+<li>
+<strong>Langage de programmation</strong> : C#</li>
+</ul><p><img src="http://cdn.netduino.com/images/hardware/netduino2/photo_overhead.gif" alt="Netduino+ 2"></p>
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
