--- a/index.html
+++ b/index.html
@@ -85,9 +85,25 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
+<hr><h3>
+<a name="classe-PCF8574" class="anchor" href="#classe-PCF8574"><span class="octicon octicon-link"></span></a>Classe PCF8574</h5>
+</h3><hr>
+<p><strong>Contenu du dossier à télécharger</strong></p>
+<hr>
+<p> Le dossier à télécharger (au format zip ou tar.gz) contient le répertoire d'un projet <strong>Microsoft Visual Studio Professionnel</strong> composé : </p>
+<ul>
+	<li>Du code de la classe PCF8574.</li>
+	<li>D'un exemple d'utilisation de cette classe.</li>
+</ul>
+<p> Les fichiers program.cs et DriversPCF8574.cs pourront être recompilés avec <strong>Microsoft Visual Studio Express</strong>.</p>
+<hr>
+<p><strong>Utilisation</strong></p>
+<hr>
+<ol>
+	<li><strong>Créer</strong> un objet en utilisant le constructeur PCF8574.</li>
+	<li><strong>Utiliser</strong> la méthode <em>WriteByte</em> pour écrire sur le port relié aux Leds et la méthode <em>ReadByte</em> pour lire le port relié aux boutons-poussoir.</li>
+</ol>
+<hr>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
