--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 <hr>
 <ol>
 	<li><strong>Créer</strong> un objet en utilisant un des constructeurs I2CLCD.</li>
-	<li><strong>Utiliser</strong> la méthode <em>Init</em> pour initialiser le LCD.</li>
-	<li><strong>Utiliser</strong> la méthode <em>ClearScreen</em> pour effacer l'écran.</li>
-	<li><strong>Utiliser</strong> les autres méthodes pour gérer l'afficahge.</li>
+	<li><strong>Initialiser</strong> le LCD avec la méthode <em>Init</em>.</li>
+	<li><strong>Effacer l'écran</strong> avec la méthode <em>ClearScreen</em>.</li>
+	<li><strong>Utiliser</strong> les autres méthodes pour gérer l'affichage.</li>
 </ol>
 <hr>
 </div>
