--- a/index.html
+++ b/index.html
@@ -91,6 +91,43 @@
 	<li><strong>Utiliser</strong> les autres méthodes pour gérer l'affichage.</li>
 </ol>
 <hr>
+<p><strong>Constructeur</strong></p>
+
+<table>
+<tr>
+<td></td>
+<td><strong>Syntaxe</strong></td>
+<td><strong>Description</strong></td>
+</tr>
+<tr>
+<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_constructor_VS.png"></td>
+<td>
+<strong>PCF8574</strong>(<strong>byte</strong> <em>I2C_Add_7bits</em>, <strong>UInt16</strong> <em>Frequency</em>)</td>
+<td>Instancie un objet "PCF8574". <br> <em>I2C_Add_7bits</em> est à définir dans l'intervalle [0x20,0x2F] pour un PCF8574 et dans l'intervalle [0x38,0x3F] pour un PCF8574A. <br><em>Frequency</em> est à définir dans l'intervalle [100kHz,400kHz]. </td>
+</tr>
+</table>
+<p><strong>Méthodes publiques</strong></p>
+
+<table>
+<tr>
+<td></td>
+<td><strong>Syntaxe</strong></td>
+<td><strong>Description</strong></td>
+</tr>
+<tr>
+<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_method_VS.png"></td>
+<td>
+<strong>byte ReadByte</strong>()</td>
+<td>Renvoie un octet représentatif de la valeur présente sur le port du PCF8574.</td>
+</tr>
+<tr>
+<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_method_VS.png"></td>
+<td>
+<strong>void WriteByte</strong>(<strong>byte</strong> <em>value</em>)</td>
+<td><p><em>value</em>: octet à écrire sur le port du PCF8574.</p></td>
+</tr>
+</table>
+      </section>
 </div>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
