--- a/index.html
+++ b/index.html
@@ -100,21 +100,23 @@
 	<td><strong>Description</strong></td>
 </tr>
 <tr>
-<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_constructor_VS.png"></td>
-<td>
-<strong>I2CLcd</strong>()</td>
-<td>Instancie un objet "I2CLcd" avec les paramètres : <br/> Fabricant = Miadas <br/> Fréquence du bus: 100kHz</td>
+	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_constructor_VS.png"></td>
+	<td><strong>I2CLcd</strong>()</td>
+	<td>Instancie un objet "I2CLcd" avec les paramètres : <br/> Fabricant = Miadas <br/> Fréquence du bus: 100kHz</td>
 </tr>
 <td>
 <strong>I2CLcd</strong>(<strong>byte</strong> <em>I2C_Add_7bits</em>, <strong>UInt16</strong> <em>Frequency</em>)</td>
+<td></td>
 <td>Instancie un objet "I2CLcd". <br> <em>I2C_Add_7bits</em> est à définir dans l'intervalle [0x20,0x2F] pour un PCF8574 et dans l'intervalle [0x38,0x3F] pour un PCF8574A. <br><em>Frequency</em> est à définir dans l'intervalle [100kHz,400kHz]. </td>
 </tr>
 <td>
 <strong>I2CLcd</strong>(<strong>byte</strong> <em>I2C_Add_7bits</em>, <strong>UInt16</strong> <em>Frequency</em>)</td>
+<td></td>
 <td>Instancie un objet "I2CLcd". <br> <em>I2C_Add_7bits</em> est à définir dans l'intervalle [0x20,0x2F] pour un PCF8574 et dans l'intervalle [0x38,0x3F] pour un PCF8574A. <br><em>Frequency</em> est à définir dans l'intervalle [100kHz,400kHz]. </td>
 </tr>
 <td>
 <strong>I2CLcd</strong>(<strong>byte</strong> <em>I2C_Add_7bits</em>, <strong>UInt16</strong> <em>Frequency</em>)</td>
+<td></td>
 <td>Instancie un objet "I2CLcd". <br> <em>I2C_Add_7bits</em> est à définir dans l'intervalle [0x20,0x2F] pour un PCF8574 et dans l'intervalle [0x38,0x3F] pour un PCF8574A. <br><em>Frequency</em> est à définir dans l'intervalle [100kHz,400kHz]. </td>
 </tr>
 </table>
@@ -122,21 +124,19 @@
 
 <table>
 <tr>
-<td></td>
-<td><strong>Syntaxe</strong></td>
-<td><strong>Description</strong></td>
+	<td></td>
+	<td><strong>Syntaxe</strong></td>
+	<td><strong>Description</strong></td>
 </tr>
 <tr>
-<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_method_VS.png"></td>
-<td>
-<strong>byte ReadByte</strong>()</td>
-<td>Renvoie un octet représentatif de la valeur présente sur le port du PCF8574.</td>
+	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_method_VS.png"></td>
+	<td><strong>byte ReadByte</strong>()</td>
+	<td>Renvoie un octet représentatif de la valeur présente sur le port du PCF8574.</td>
 </tr>
 <tr>
-<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_method_VS.png"></td>
-<td>
-<strong>void WriteByte</strong>(<strong>byte</strong> <em>value</em>)</td>
-<td><p><em>value</em>: octet à écrire sur le port du PCF8574.</p></td>
+	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_method_VS.png"></td>
+	<td><strong>void WriteByte</strong>(<strong>byte</strong> <em>value</em>)</td>
+	<td><p><em>value</em>: octet à écrire sur le port du PCF8574.</p></td>
 </tr>
 </table>
       </section>
