--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 <p><img src="http://cdn.netduino.com/images/hardware/netduino2/photo_overhead.gif" alt="Netduino+ 2"></p>
 <h3>
 
-<hr/><h3>
-	<a name="classe-PCF8574" class="anchor" href="#classe-PCF8574"><span class="octicon octicon-link"></span></a>Classe PCF8574</h5>
-</h3><hr/>
+<hr/>
+<h3><Classe I2CLCD</h3>
+<hr/>
 <p><strong>Contenu du dossier à télécharger</strong></p>
 <hr>
 <p> Le dossier à télécharger (au format zip ou tar.gz) contient le répertoire d'un projet <strong>Microsoft Visual Studio Professionnel</strong> composé : </p>
