--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 <tr>
 	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_constructor_VS.png"></td>
 	<td><strong>I2CLcd</strong>()</td>
-	<td>Instancie un objet "I2CLcd" avec les paramètres : <br/> Fabricant = Miadas <br/> Fréquence du bus: 100kHz</td>
+	<td>Instancie un objet "I2CLcd" avec les paramètres : <br/> Fabricant = Midas <br/> Fréquence du bus: 100kHz</td>
 </tr>
 	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_constructor_VS.png"></td>
-	<td><strong>I2CLcd</strong>(<strong>byte</strong> <em>I2C_Add_7bits</em>, <strong>UInt16</strong> <em>Frequency</em>)</td>
-	<td>Instancie un objet "I2CLcd". <br> <em>I2C_Add_7bits</em> est à définir dans l'intervalle [0x20,0x2F] pour un PCF8574 et dans l'intervalle [0x38,0x3F] pour un PCF8574A. <br><em>Frequency</em> est à définir dans l'intervalle [100kHz,400kHz]. </td>
+	<td><strong>I2CLcd</strong>(<strong>byte</strong> <em>I2C_Add_7bits</em>/td>
+	<td>Instancie un objet "I2CLcd". <br> <em>I2C_Add_7bits</em> est à l'adresse sur 7 bits attribuée à l'afficheur. <br/> Fréquence du bus: 100kHz</td>
 </tr>
 	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_constructor_VS.png"></td>
 	<td><strong>I2CLcd</strong>(<strong>byte</strong> <em>I2C_Add_7bits</em>, <strong>UInt16</strong> <em>Frequency</em>)</td>
