--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+ <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Lcdi2c : A NETMF library for LCD 2x16 I2C (PCF2119).">
+    <meta name="description" content="Contrôler un afficheur LCD 2x16 I2C (PCF2119).">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Lcdi2c</title>
-  </head>
+    <title>I2CLcd</title>
+ </head>
 
   <body>
 
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/WebGE/LCDI2C">View on GitHub</a>
 
-          <h1 id="project_title">Lcdi2c</h1>
-          <h2 id="project_tagline">A NETMF library for LCD 2x16 I2C (PCF2119).</h2>
+          <h1 id="project_title">Contrôler un afficheur LCD 2x16 I2C (PCF2119)</h1>
+          <h2 id="project_tagline">Programme de test en C# et description de la classe I2CLcd destinés à une Netduino+2</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/WebGE/LCDI2C/zipball/master">Download this project as a .zip file</a>
@@ -28,21 +28,23 @@
         </header>
     </div>
 
-    <!-- MAIN CONTENT -->
+<!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <hr/><h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>PCF219 : LCD controllers/drivers</h3><hr/>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>PCF2119 : LCD controllers/drivers</h3><hr/>
 <p>Le PCF2119 est un circuit intégré destiné à la commande des matrices de points 5x8 des lcd 2x16 ou 1x32 via un bus I2C.</p>
 <ul>
   <li><strong>Exemple : Afficheur MIDAS - MC21605E6W-SPTLYI - LCD 2X16 STN LED B/L Y/VERT I2C I/F</strong></li>
   <img src="http://fr.farnell.com/productimages/farnell/standard/2342652-40.jpg" />
+  <li><strong>Documentation: </strong><a href="http://www.farnell.com/datasheets/1722538.pdf" target="_blank">pdf</a></li>
   <p>Il peut être utiliser comme dans l'exemple ci-dessous.</p>
 </ul>
 <hr/>
  <h3>Exemple d'IHM</h3>
  <p><img src="https://lh5.googleusercontent.com/f3gmEOrYLfdhlzekaLnlQfJzibKGl0s-_dm_A1-Vuqo=w209-h207-p-no" width="50%" height="50%"></p>
-<p>Les huit Leds et les huit boutons-poussoir sont commandés par deux PCF8574.</p> 
+<p>Afficheur I2C 2x16 BATRON ou MIDAS</p> 
+<p>Les huit Leds et les huit boutons-poussoir sont commandés par deux PCF8574 : <a href="http://webge.github.io/PCF8574/">Page à voir</a></p> 
 <hr/>
 <h3>
 <a name="carte-netduino-de-secret-labs" class="anchor" href="#carte-netduino-de-secret-labs" target="_blank"><span class="octicon octicon-link"></span></a>Carte NetDuino plus 2 </h3><h5>Secret Labs</h5>
@@ -68,7 +70,14 @@
 <strong>Langage de programmation</strong> : C#</li>
 </ul>
 <p><img src="http://cdn.netduino.com/images/hardware/netduino2/photo_overhead.gif" alt="Netduino+ 2"></p>
-
+<ul>
+<li>
+<strong>Sites à consulter</strong>: <a href="http://netduino.com/netduinoplus2/specs.htm" target="_blank">Netduino</a>, <a href="http://www.netmf.com/" target="_blank">NETMF</a>
+</li>
+<li>
+<strong>Distributeurs</strong> : <a href="http://www.robotshop.com/en/catalogsearch/result/?q=netduino&order=stats_sales_order_count&dir=desc" target="_blank">RobotShop</a>, <a href="http://www.mouser.fr/Search/Refine.aspx?Keyword=netduino" target="_blank">Mouser Electronics</a>
+</li>
+</ul>
 
 <hr/>
 <h3>Classe I2CLCD</h3>
@@ -85,14 +94,13 @@
 <p><strong>Utilisation</strong></p>
 <hr>
 <ol>
-	<li><strong>Créer</strong> un objet en utilisant un des constructeurs I2CLCD.</li>
+	<li><strong>Créer</strong> un objet en utilisant un des constructeurs <em>I2CLcd</em>.</li>
 	<li><strong>Initialiser</strong> le LCD avec la méthode <em>Init</em>.</li>
 	<li><strong>Effacer l'écran</strong> avec la méthode <em>ClearScreen</em>.</li>
 	<li><strong>Utiliser</strong> les autres méthodes pour gérer l'affichage.</li>
 </ol>
 <hr>
-<p><strong>Constructeur</strong></p>
-
+<p><strong>Constructeurs</strong></p>
 <table>
 <tr>
 	<td></td>
@@ -104,21 +112,67 @@
 	<td><strong>I2CLcd</strong>()</td>
 	<td>Instancie un objet "I2CLcd" avec les paramètres : <br/> Fabricant = Midas <br/> Fréquence du bus: 100kHz</td>
 </tr>
+<tr>
 	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_constructor_VS.png"></td>
-	<td><strong>I2CLcd</strong>(<strong>byte</strong> <em>I2C_Add_7bits</em>/td>
-	<td>Instancie un objet "I2CLcd". <br> <em>I2C_Add_7bits</em> est à l'adresse sur 7 bits attribuée à l'afficheur. <br/> Fréquence du bus: 100kHz</td>
+	<td><strong>I2CLcd</strong>(<strong>UInt16</strong> <em>I2C_Add_7bits)</em></td>
+	<td>Instancie un objet "I2CLcd". <br> <em>I2C_Add_7bits</em> est l'adresse I2C sur 7 bits attribuée à l'afficheur. <br/> Fréquence du bus: 100kHz.</td>
 </tr>
+<tr>
 	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_constructor_VS.png"></td>
-	<td><strong>I2CLcd</strong>(<strong>byte</strong> <em>I2C_Add_7bits</em>, <strong>UInt16</strong> <em>Frequency</em>)</td>
-	<td>Instancie un objet "I2CLcd". <br> <em>I2C_Add_7bits</em> est à définir dans l'intervalle [0x20,0x2F] pour un PCF8574 et dans l'intervalle [0x38,0x3F] pour un PCF8574A. <br><em>Frequency</em> est à définir dans l'intervalle [100kHz,400kHz]. </td>
+	<td><strong>I2CLcd</strong>(<strong>LcdManufacturer</strong> <em>ManufacturerName</em>)</td>
+	<td>Instancie un objet "I2CLcd". <em>ManufacturerName</em> est le nom du fabricant.<br/> Il correspond à l'adresse I2C du LCD :
+		<ul>
+			<li><strong>Midas</strong> (0x3a)</li>
+			<li><strong>Batron</strong> (0x3b)</li>
+		</ul>			
+		Fréquence du bus: 100kHz. 
+	</td>
 </tr>
+<tr>
 	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_constructor_VS.png"></td>
-	<td><strong>I2CLcd</strong>(<strong>byte</strong> <em>I2C_Add_7bits</em>, <strong>UInt16</strong> <em>Frequency</em>)</td>
-	<td>Instancie un objet "I2CLcd". <br> <em>I2C_Add_7bits</em> est à définir dans l'intervalle [0x20,0x2F] pour un PCF8574 et dans l'intervalle [0x38,0x3F] pour un PCF8574A. <br><em>Frequency</em> est à définir dans l'intervalle [100kHz,400kHz]. </td>
+	<td><strong>I2CLcd</strong>(<strong>UInt16</strong> <em>I2C_Add_7bits</em>, <strong>UInt16</strong> <em>Frequency</em>)</td>
+	<td>Instancie un objet "I2CLcd". <br> <em>I2C_Add_7bits</em> est l'adresse I2C sur 7 bits attribuée à l'afficheur.  <br><em>Frequency</em> est à définir dans l'intervalle [100kHz,400kHz]. </td>
+</tr>
+<tr>
+	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_constructor_VS.png"></td>
+	<td><strong>I2CLcd</strong>(<strong>LcdManufacturer</strong> <em>ManufacturerName</em>, <strong>UInt16</strong> <em>Frequency</em>)</td>
+	<td>Instancie un objet "I2CLcd". <em>ManufacturerName</em> est le nom du fabricant.<br/> Il correspond à l'adresse I2C du LCD :
+		<ul>
+			<li><strong>Midas</strong> (0x3a)</li>
+			<li><strong>Batron</strong> (0x3b)</li>
+		</ul>			
+	<em>Frequency</em> est à définir dans l'intervalle [100kHz,400kHz]. 
+	</td>
 </tr>
 </table>
-<p><strong>Méthodes publiques</strong></p>
 
+<p><strong>Enumérations</strong></p>
+<table>
+<tr>
+<td></td>
+<td><strong>Syntaxe</strong></td>
+<td><strong>Description</strong></td>
+</tr>
+<tr>
+	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_enum_VS.png"></td>
+	<td><strong>LcdManufacturer</strong></td>
+	<td>
+	MIDAS : 0x3a (par défaut)<br/>
+	BATRON : 0x3B
+	</td>
+</tr>
+<tr>
+	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_enum_VS.png"></td>
+	<td><strong>CursorType</strong></td>
+	<td>
+	Hide : caché (par défaut)<br />
+	Underline : soulignement<br />
+	Blink : clignotant
+	</td>
+</tr>
+</table>
+
+<p><strong>Méthodes publiques</strong></p>
 <table>
 <tr>
 	<td></td>
@@ -127,13 +181,57 @@
 </tr>
 <tr>
 	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_method_VS.png"></td>
-	<td><strong>byte ReadByte</strong>()</td>
-	<td>Renvoie un octet représentatif de la valeur présente sur le port du PCF8574.</td>
+	<td><strong>void ClearScreen</strong>()</td>
+	<td>Efface l'écran (2 x 16 caractères).</td>
 </tr>
 <tr>
 	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_method_VS.png"></td>
-	<td><strong>void WriteByte</strong>(<strong>byte</strong> <em>value</em>)</td>
-	<td><p><em>value</em>: octet à écrire sur le port du PCF8574.</p></td>
+	<td><strong>void Init</strong>()</td>
+	<td>Initialise l'afficheur en mode 2 x 16 caractères. A utiliser en premier après la construction de l'objet.</td>
+</tr>
+<tr>
+	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_method_VS.png"></td>
+	<td><strong>void LineBegin</strong>(<strong>byte</strong> <em>x</em>)</td>
+	<td>
+	<p>Fixe le début de la ligne.</p>
+	<p><em>x</em>: position en x sur l'afficheur (0..15).</p>
+	</td>
+</tr>
+<tr>
+	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_method_VS.png"></td>
+	<td><strong>void PutChar</strong>(<strong>byte</strong> <em>x_pos</em>, <strong>byte</strong> <em>y_pos</em>, <strong>byte</strong> <em>z_char</em>)</td>
+	<td>
+		<p>Ecrit un caractère (z_char) aux coordonnées (x_pos, y_pos) de l'afficheur.
+		<p><em>x_pos</em>: position en x sur l'afficheur (0..15).</p>
+		<p><em>y_pos</em>: position en y sur l'afficheur (0..1).</p>
+		<p><em>z_char</em>: caractère à afficher.</p>
+	</td>
+</tr>
+<tr>
+	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_method_VS.png"></td>
+	<td><strong>void PutString</strong>(<strong>byte</strong> <em>x_pos</em>, <strong>byte</strong> <em>y_pos</em>, <strong>string</strong> <em>Text</em>)</td>
+	<td>
+		<p>Ecrit une chaîne de caractères (Text) aux coordonnées (x_pos, y_pos) de l'afficheur.
+		<p><em>x_pos</em>: position en x sur l'afficheur (0..15).</p>
+		<p><em>y_pos</em>: position en y sur l'afficheur (0..1).</p>
+		<p><em>Text</em>: Chaîne à afficher.</p>
+	</td>
+</tr>
+<tr>
+	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_method_VS.png"></td>
+	<td><strong>void SelectCursor</strong>(<strong>CursorType</strong> <em>posCursorx</em>)</td>
+	<td>
+	<p>Sélection du curseur</p>
+	<p><em>CursorType</em>: Hide, Underline, Blink</p>
+	</td>
+</tr>
+<tr>
+	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_method_VS.png"></td>
+	<td><strong>void SetBacklight</strong>(<strong>byte</strong> <em>bright</em>)</td>
+	<td>
+		<p>Réglage du contraste de l'aficheur</p>
+		<p><em>bright</em>: 20 dark -> 0 light</p>
+	</td>
 </tr>
 </table>
       </section>
@@ -141,7 +239,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Lcdi2c maintained by <a href="https://github.com/WebGE">WebGE</a></p>
+        <p class="copyright">Contrôler un afficheur LCD 2x16 I2C (PCF2119) by <a href="https://github.com/WebGE">WebGE</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
