--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
       <section id="main_content" class="inner">
         <hr/><h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>PCF2119 : LCD controllers/drivers</h3><hr/>
-<p>Le PCF2119 est un circuit intégré destiné à la commande des matrices de points 5x8 des lcd 2x16 ou 1x32 via un bus I2C.</p>
 <ul>
+  <li><strong>Présentation</strong></li>
+<p>Le PCF2119 est un circuit intégré destiné à la commande des matrices de points 5x8 des lcd 2x16 ou 1x32 via un bus I2C.</p>
   <li><strong>Exemple : Afficheur MIDAS - MC21605E6W-SPTLYI - LCD 2X16 STN LED B/L Y/VERT I2C I/F</strong></li>
   <img src="http://fr.farnell.com/productimages/farnell/standard/2342652-40.jpg" />
   <li><strong>Documentation: </strong><a href="http://www.farnell.com/datasheets/1722538.pdf" target="_blank">pdf</a></li>
+  <li>
+<strong>Distributeur</strong> : <a href="http://fr.farnell.com/midas/mc21605e6w-sptlyi/lcd-2x16-stn-led-b-l-vert-i2c-i/dp/2342652" target="_blank" >Farnell</a>
+</li>
   <p>Il peut être utiliser comme dans l'exemple ci-dessous.</p>
 </ul>
 <hr/>
