--- a/index.html
+++ b/index.html
@@ -5,22 +5,17 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Contrôler un afficheur LCD 2x16 I2C (PCF2119).">
-
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
     <title>I2CLcd</title>
  </head>
 
   <body>
-
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/WebGE/LCDI2C">View on GitHub</a>
-
           <h1 id="project_title">Contrôler un afficheur LCD 2x16 I2C (PCF2119)</h1>
           <h2 id="project_tagline">Programme de test en C# et description de la classe I2CLcd destinés à une Netduino+2</h2>
-
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/WebGE/LCDI2C/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/WebGE/LCDI2C/tarball/master">Download this project as a tar.gz file</a>
@@ -34,67 +29,51 @@
         <hr/><h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>PCF2119 : LCD controllers/drivers</h3><hr/>
 <ul>
-  <li><strong>Présentation</strong></li>
-<p>Le PCF2119 est un circuit intégré destiné à la commande des matrices de points 5x8 des lcd 2x16 ou 1x32 via un bus I2C.</p>
-  <li><strong>Exemple : Afficheur MIDAS - MC21605E6W-SPTLYI - LCD 2X16 STN LED B/L Y/VERT I2C I/F</strong></li>
-  <img src="http://fr.farnell.com/productimages/farnell/standard/2342652-40.jpg" />
-  <li><strong>Documentation: </strong><a href="http://www.farnell.com/datasheets/1722538.pdf" target="_blank">pdf</a></li>
-  <li>
-<strong>Distributeur</strong> : <a href="http://fr.farnell.com/midas/mc21605e6w-sptlyi/lcd-2x16-stn-led-b-l-vert-i2c-i/dp/2342652" target="_blank" >Farnell</a>
-</li>
+	<li><strong>Présentation</strong></li>
+	<p>Le PCF2119 est un circuit intégré destiné à la commande des matrices de points 5x8 des lcd 2x16 ou 1x32 via un bus I2C.</p>
+	<li><strong>Exemple : Afficheur MIDAS - MC21605E6W-SPTLYI - LCD 2X16 STN LED B/L Y/VERT I2C I/F</strong></li>
+	<p align="center"><img src="http://fr.farnell.com/productimages/farnell/standard/2342652-40.jpg" /></p>
+	<li><strong>Documentation: </strong><a href="http://www.farnell.com/datasheets/1722538.pdf" target="_blank">pdf</a></li>
+	<li><strong>Distributeur</strong> : <a href="http://fr.farnell.com/midas/mc21605e6w-sptlyi/lcd-2x16-stn-led-b-l-vert-i2c-i/dp/2342652" target="_blank" >Farnell</a></li>
   <p>Il peut être utiliser comme dans l'exemple ci-dessous.</p>
 </ul>
 <hr/>
- <h3>Exemple d'IHM</h3>
- <p><img src="https://lh5.googleusercontent.com/f3gmEOrYLfdhlzekaLnlQfJzibKGl0s-_dm_A1-Vuqo=w209-h207-p-no" width="50%" height="50%"></p>
+<h3>Exemple d'IHM</h3>
+<p align="center"><img src="https://lh5.googleusercontent.com/f3gmEOrYLfdhlzekaLnlQfJzibKGl0s-_dm_A1-Vuqo=w209-h207-p-no" width="50%" height="50%"></p>
 <p>Afficheur I2C 2x16 BATRON ou MIDAS</p> 
 <p>Les huit Leds et les huit boutons-poussoir sont commandés par deux PCF8574 : <a href="http://webge.github.io/PCF8574/">Page à voir</a></p> 
 <hr/>
 <h3>
 <a name="carte-netduino-de-secret-labs" class="anchor" href="#carte-netduino-de-secret-labs" target="_blank"><span class="octicon octicon-link"></span></a>Carte NetDuino plus 2 </h3><h5>Secret Labs</h5>
-<hr>
+<hr/>
 <ul>
-<li>
-	<strong>Microcontrôleur</strong> : STM32F405RG 32 bits à architecture Cortex-M4 cadencé à 168 MHz.</li>
-<li>
-<strong>RAM</strong> : 100 KB.</li>
-<li>
-<strong>Flash</strong> : 384 KB.</li>
-<li>
-<strong>Port Ethernet</strong> 10Mbps.</li>
-<li>
-<strong>E/S numériques</strong> : 14</li>
-<li>
-<strong>Entrées analogiques</strong> : 6</li>
-<li>
-<strong>IDE</strong> : Microsoft Visual Studio (professionnel ou express)</li>
-<li>
-<strong>Framework</strong> : micro framework .NET (NETMF)</li>
-<li>
-<strong>Langage de programmation</strong> : C#</li>
+	<li><strong>Microcontrôleur</strong> : STM32F405RG 32 bits à architecture Cortex-M4 cadencé à 168 MHz.</li>
+	<li><strong>RAM</strong> : 100 KB.</li>
+	<li><strong>Flash</strong> : 384 KB.</li>
+	<li><strong>Port Ethernet</strong> 10Mbps.</li>
+	<li><strong>E/S numériques</strong> : 14</li>
+	<li><strong>Entrées analogiques</strong> : 6</li>
+	<li><strong>IDE</strong> : Microsoft Visual Studio (professionnel ou express)</li>
+	<li><strong>Framework</strong> : micro framework .NET (NETMF)</li>
+	<li><strong>Langage de programmation</strong> : C#</li>
 </ul>
-<p><img src="http://cdn.netduino.com/images/hardware/netduino2/photo_overhead.gif" alt="Netduino+ 2"></p>
+<p align="center"><img src="http://cdn.netduino.com/images/hardware/netduino2/photo_overhead.gif" alt="Netduino+ 2"></p>
 <ul>
-<li>
-<strong>Sites à consulter</strong>: <a href="http://netduino.com/netduinoplus2/specs.htm" target="_blank">Netduino</a>, <a href="http://www.netmf.com/" target="_blank">NETMF</a>
-</li>
-<li>
-<strong>Distributeurs</strong> : <a href="http://www.robotshop.com/en/catalogsearch/result/?q=netduino&order=stats_sales_order_count&dir=desc" target="_blank">RobotShop</a>, <a href="http://www.mouser.fr/Search/Refine.aspx?Keyword=netduino" target="_blank">Mouser Electronics</a>
-</li>
+	<li><strong>Sites à consulter</strong>: <a href="http://netduino.com/netduinoplus2/specs.htm" target="_blank">Netduino</a>, <a href="http://www.netmf.com/" target="_blank">NETMF</a></li>
+	<li><strong>Distributeurs</strong> : <a href="http://www.robotshop.com/en/catalogsearch/result/?q=netduino&order=stats_sales_order_count&dir=desc" target="_blank">RobotShop</a>, <a href="http://www.mouser.fr/Search/Refine.aspx?Keyword=netduino" target="_blank">Mouser Electronics</a></li>
 </ul>
-
 <hr/>
 <h3>Classe I2CLCD</h3>
 <hr/>
 <p><strong>Contenu du dossier à télécharger</strong></p>
-<hr>
+<hr/>
 <p> Le dossier à télécharger (au format zip ou tar.gz) contient le répertoire d'un projet <strong>Microsoft Visual Studio Professionnel</strong> composé : </p>
 <ul>
-	<li>Du code de la classe I2CLCD.</li>
+	<li>Du code de la classe <em>I2CLCD</em>.</li>
 	<li>D'un exemple d'utilisation de cette classe.</li>
 </ul>
 <p> Les fichiers program.cs et DriversI2CLCD.cs pourront être recompilés avec <strong>Microsoft Visual Studio Express</strong>.</p>
-<hr>
+<hr/>
 <p><strong>Utilisation</strong></p>
 <hr>
 <ol>
@@ -151,11 +130,11 @@
 </table>
 
 <p><strong>Enumérations</strong></p>
-<table>
+<table width="100%">
 <tr>
-<td></td>
-<td><strong>Syntaxe</strong></td>
-<td><strong>Description</strong></td>
+	<td></td>
+	<td><strong>Syntaxe</strong></td>
+	<td><strong>Description</strong></td>
 </tr>
 <tr>
 	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_enum_VS.png"></td>
