--- a/index.html
+++ b/index.html
@@ -140,17 +140,17 @@
 	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_enum_VS.png"></td>
 	<td><strong>LcdManufacturer</strong></td>
 	<td>
-	MIDAS : 0x3a (par défaut)<br/>
-	BATRON : 0x3B
+		BATRON : 0x3B <br/>
+		MIDAS : 0x3a (par défaut)	
 	</td>
 </tr>
 <tr>
 	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_enum_VS.png"></td>
 	<td><strong>CursorType</strong></td>
 	<td>
-	Hide : caché (par défaut)<br />
-	Underline : soulignement<br />
-	Blink : clignotant
+		Blink : clignotant (par défaut)<br/>
+		Hide : caché <br />
+		Underline : soulignement	
 	</td>
 </tr>
 </table>
