--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_enum_VS.png"></td>
 	<td><strong>LcdManufacturer</strong></td>
 	<td>
-		BATRON : 0x3B <br/>
+		BATRON : 0x3b <br/>
 		MIDAS : 0x3a (par défaut)	
 	</td>
 </tr>
