--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	<li>Du code de la classe <em>I2CLCD</em>.</li>
 	<li>D'un exemple d'utilisation de cette classe.</li>
 </ul>
-<p> Les fichiers program.cs et DriversI2CLCD.cs pourront être recompilés avec <strong>Microsoft Visual Studio Express</strong>.</p>
+<p> Les fichiers program.cs et I2CLCD.cs pourront être recompilés avec <strong>Microsoft Visual Studio Express</strong>.</p>
 <hr/>
 <p><strong>Utilisation</strong></p>
 <hr>
@@ -155,7 +155,7 @@
 </tr>
 </table>
 
-<p><strong>Méthodes publiques</strong></p>
+<p><strong>Méthodes</strong></p>
 <table>
 <tr>
 	<td></td>
