--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 <hr/>
 <p><strong>Contenu du dossier à télécharger</strong></p>
 <hr/>
-<p> Le dossier à télécharger (au format zip ou tar.gz) contient le répertoire d'un projet <strong>Microsoft Visual Studio Professionnel</strong> composé : </p>
+<p> Le dossier à télécharger (au format zip ou tar.gz) contient le répertoire de la solution <strong>NetduinoI2CLCD</strong> composée : </p>
 <ul>
-	<li>Du code de la classe <em>I2CLCD</em>.</li>
-	<li>D'un exemple d'utilisation de cette classe.</li>
+	<li>Du projet <strong>I2CLCD </strong> : le code de la classe <em>I2CLCD</em>.</li>
+	<li>Du projet <strong>TestI2CLCD </strong>: un exemple d'utilisation de cette classe.</li>
 </ul>
 <hr/>
 <p><strong>Utilisation</strong></p>
