--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 <p><strong>Utilisation</strong></p>
 <hr>
 <ol>
+	<li><strong>Ajouter</strong> la référence<strong> LCDI2C</strong> et l'espace de nom <strong>ToolBoxes </strong>dans le projet.</li>
 	<li><strong>Créer</strong> un objet en utilisant un des constructeurs <em>I2CLcd</em>.</li>
 	<li><strong>Initialiser</strong> le LCD avec la méthode <em>Init</em>.</li>
 	<li><strong>Effacer l'écran</strong> avec la méthode <em>ClearScreen</em>.</li>
