--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/WebGE/LCDI2C">View on GitHub</a>
           <h1 id="project_title">Contrôler un afficheur LCD 2x16 I2C (PCF2119)</h1>
-          <h2 id="project_tagline">Programme de test en C# et description de la classe I2CLcd destinés à une Netduino+2</h2>
+          <h2 id="project_tagline">Programme de test en C# et description de la classe I2CLcd destinés à une Netduino plus 2 et une Netduino 3</h2>
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/WebGE/LCDI2C/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/WebGE/LCDI2C/tarball/master">Download this project as a tar.gz file</a>
@@ -43,20 +43,31 @@
 <p>huit Leds et huit boutons-poussoir connectés à deux PCF8574 : <a href="http://webge.github.io/PCF8574/">A voir</a></p> 
 <hr/>
 <h3>
-<a name="carte-netduino-de-secret-labs" class="anchor" href="#carte-netduino-de-secret-labs" target="_blank"><span class="octicon octicon-link"></span></a>Carte NetDuino plus 2 </h3><h5>Secret Labs</h5>
+<a name="carte-netduino-de-secret-labs" class="anchor" href="#carte-netduino-de-secret-labs" target="_blank"><span class="octicon octicon-link"></span></a>Les cartes NetDuino</h3><h5>Secret Labs</h5>
 <hr/>
 <ul>
 	<li><strong>Microcontrôleur</strong> : STM32F405RG 32 bits à architecture Cortex-M4 cadencé à 168 MHz.</li>
-	<li><strong>RAM</strong> : 100 KB.</li>
-	<li><strong>Flash</strong> : 384 KB.</li>
-	<li><strong>Port Ethernet</strong> 10Mbps.</li>
+	<li><strong>RAM</strong> : 100 KB (164+)*.</li>
+	<li><strong>Flash</strong> : 384 KB (1408KB)*.</li>
+	<li><strong>Port Ethernet : </strong> 10Mbps (Wifi:802.11b/g/n)*.</li>
 	<li><strong>E/S numériques</strong> : 14</li>
 	<li><strong>Entrées analogiques</strong> : 6</li>
-	<li><strong>IDE</strong> : Microsoft Visual Studio (professionnel ou express)</li>
-	<li><strong>Framework</strong> : micro framework .NET (NETMF)</li>
-	<li><strong>Langage de programmation</strong> : C#</li>
+	<li><strong>IDE</strong> : Microsoft Visual Studio</li>
+	<li><strong>Framework</strong> : .NETMF 4.3</li>
+	<li><strong>Langages de programmation</strong> : C#, VB</li>
 </ul>
-<p align="center"><img src="https://lh4.googleusercontent.com/-r-2bq_1YFzw/VUNMy1EODoI/AAAAAAAABXU/q20WYrAvnDw/w350-h280-no/NETDuino2plus.JPG" alt="Netduino+ 2"></p>
+
+<table>
+	<tr>
+		<td><img src="http://www.mouser.com/images/microsites/Netduino_Plus_2.jpg" alt="Netduino plus 2" /></td>
+		<td><img src="http://cdn.netduino.com/images/hardware/netduino3wifi.jpg" alt="Netduino 3 wifi" /></td>
+	</tr>
+	<tr>
+		<td align="center"><strong>Netduino + 2</strong></td>
+		<td  align="center"><strong>Netduino 3 wifi*</strong></td>
+	</tr>
+</table>
+
 <ul>
 	<li><strong>Sites à consulter</strong>: <a href="http://netduino.com/netduinoplus2/specs.htm" target="_blank">Netduino</a>, <a href="http://www.netmf.com/" target="_blank">NETMF</a></li>
 	<li><strong>Distributeurs</strong> : <a href="http://www.robotshop.com/en/catalogsearch/result/?q=netduino&order=stats_sales_order_count&dir=desc" target="_blank">RobotShop</a>, <a href="http://www.mouser.fr/Search/Refine.aspx?Keyword=netduino" target="_blank">Mouser Electronics</a></li>
