--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </ul>
 <hr/>
 <h3>IHM SSI</h3>
-<p align="center"><img src=https://lh6.googleusercontent.com/-DEtJD_G9Qy8/VUNNsubjwVI/AAAAAAAABXk/I3VgCwNuRsc/w380-h377-no/SSI2.jpg></p>
+<p align="center"><img src="images/IHMSISI.jpg"></p>
 <p>La carte SSI comprend un afficheur I2C 2x16 BATRON ou MIDAS,</p> 
 <p>huit Leds et huit boutons-poussoir connectés à deux PCF8574 : <a href="http://webge.github.io/PCF8574/">A voir</a></p> 
 <hr/>
