MàJ type des variables

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 </tr>
 <tr>
 	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_constructor_VS.png"></td>
-	<td><strong>I2CLcd</strong>(<strong>UInt16</strong> <em>I2C_Add_7bits)</em></td>
+	<td><strong>I2CLcd</strong>(<strong>byte</strong> <em>I2C_Add_7bits)</em></td>
 	<td>Instancie un objet "I2CLcd". <br> <em>I2C_Add_7bits</em> est l'adresse I2C sur 7 bits attribuée à l'afficheur. <br/> Fréquence du bus: 100kHz.</td>
 </tr>
 <tr>
@@ -123,7 +123,7 @@
 </tr>
 <tr>
 	<td><img src="http://www.jetbrains.com/resharper/webhelp50/images/general_constructor_VS.png"></td>
-	<td><strong>I2CLcd</strong>(<strong>UInt16</strong> <em>I2C_Add_7bits</em>, <strong>UInt16</strong> <em>Frequency</em>)</td>
+	<td><strong>I2CLcd</strong>(<strong>byte</strong> <em>I2C_Add_7bits</em>, <strong>UInt16</strong> <em>Frequency</em>)</td>
 	<td>Instancie un objet "I2CLcd". <br> <em>I2C_Add_7bits</em> est l'adresse I2C sur 7 bits attribuée à l'afficheur.  <br><em>Frequency</em> est à définir dans l'intervalle [100kHz,400kHz]. </td>
 </tr>
 <tr>
