--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
 </ul>
 <hr/>
 <h3>IHM SSI</h3>
+<p>L'IHM SSI <a href="https://webge.github.io/IHMSSI/" target="_blank">[Documentation]</a>comprend :</p>
+	<ul>
+		<li>un afficheur I2C 2x16 BATRON ou MIDAS à PCF2119,</li>
+		<li>huit Leds et huit boutons-poussoir connectés à deux PCF8574 <a href="https://webge.github.io/PCF8574/" target="_blank">[Documentation]</a></li>
+	</ul>
 <p align="center"><img src="images/IHMSISI.jpg" width="50%" height="50%"></p>
-<p>La carte SSI comprend un afficheur I2C 2x16 BATRON ou MIDAS,</p> 
-<p>huit Leds et huit boutons-poussoir connectés à deux PCF8574 : <a href="http://webge.github.io/PCF8574/">A voir</a></p> 
 <hr/>
 <h3>
 <a name="carte-netduino-de-secret-labs" class="anchor" href="#carte-netduino-de-secret-labs" target="_blank"><span class="octicon octicon-link"></span></a>Les cartes NetDuino</h3><h5>Secret Labs</h5>
