--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 </ul>
 <hr/>
 <h3>IHM SSI</h3>
-<p>L'IHM SSI <a href="https://webge.github.io/IHMSSI/" target="_blank">[Documentation]</a>comprend :</p>
+<p>L'<strong>I</strong>nterface <strong>H</strong>omme <strong>M</strong>achine SSI se compose :</p>
 	<ul>
-		<li>un afficheur I2C 2x16 BATRON ou MIDAS à PCF2119,</li>
-		<li>huit Leds et huit boutons-poussoir connectés à deux PCF8574 <a href="https://webge.github.io/PCF8574/" target="_blank">[Documentation]</a></li>
+		<li>d'un afficheur I²C 2x16 (MIDAS ou BATRON) à PCF2119,</li>
+		<li>et de huit leds et huit boutons-poussoir connectés à deux <a href="https://webge.github.io/PCF8574/" target="_blank">PCF8574</a>.</li>
 	</ul>
 <p align="center"><img src="images/IHMSISI.jpg" width="50%" height="50%"></p>
 <hr/>
