--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <p>L'<strong>I</strong>nterface <strong>H</strong>omme <strong>M</strong>achine SSI se compose :</p>
 	<ul>
 		<li>d'un afficheur I²C 2x16 (MIDAS ou BATRON) à PCF2119,</li>
-		<li>et de huit leds et huit boutons-poussoir connectés à deux <a href="https://webge.github.io/PCF8574/" target="_blank">PCF8574</a>.</li>
+		<li>de huit leds et de huit boutons-poussoir connectés à deux <a href="https://webge.github.io/PCF8574/" target="_blank">PCF8574</a>.</li>
 	</ul>
 <p align="center"><img src="images/IHMSISI.jpg" width="50%" height="50%"></p>
 <hr/>
