--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/WebGE/LCDI2C">View on GitHub</a>
-          <h1 id="project_title">Contrôler un afficheur LCD 2x16 I2C (PCF2119)</h1>
+          <h1 id="project_title">Afficheur LCD 2x16 I²C</h1>
           <h2 id="project_tagline">Description de la classe <strong><em>I2CLcd</em></strong> développée en C# pour une Netduino plus 2 ou une Netduino 3.</h2>
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/WebGE/LCDI2C/zipball/master">Download this project as a .zip file</a>
@@ -27,7 +27,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <hr/><h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>PCF2119 : LCD controllers/drivers</h3><hr/>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Le PCF2119 : LCD controllers/drivers</h3><hr/>
 <ul>
 	<li><strong>Présentation</strong></li>
 	<p>Le PCF2119 est un circuit intégré destiné à la commande des matrices de points 5x8. Il est utilisé par les afficheurs à cristaux liquides (lcd) 2x16 ou 1x32. On y accède via un bus I²C. Un exemple d'afficheur utilisant ce circuit est présenté ci-dessous.</p>
@@ -53,8 +53,9 @@
 	<li><strong>RAM</strong> : 100 KB (164+)*.</li>
 	<li><strong>Flash</strong> : 384 KB (1408KB)*.</li>
 	<li><strong>Port Ethernet : </strong> 10Mbps (Wifi:802.11b/g/n)*.</li>
-	<li><strong>E/S numériques</strong> : 14</li>
+	<li><strong>E/S numériques</strong> : 22</li>
 	<li><strong>Entrées analogiques</strong> : 6</li>
+	<li><strong>Stockage</strong>: carte µSD</li>
 	<li><strong>IDE</strong> : Microsoft Visual Studio</li>
 	<li><strong>Framework</strong> : .NETMF 4.3</li>
 	<li><strong>Langages de programmation</strong> : C#, VB</li>
