--- a/index.html
+++ b/index.html
@@ -78,19 +78,22 @@
 </ul>
 <hr/>
 <h3>Classe I2CLCD</h3>
+<p>     Contrôle un afficheur à PCF2119 via un bus I²C.</p>
+<p>     <strong>Espace de noms:</strong> Toolboxes</p>
+<p>     <strong>Assembly:</strong>I2CLCD</p>
 <hr/>
 <p><strong>Contenu du dossier à télécharger</strong></p>
 <hr/>
 <p> Le dossier à télécharger (au format zip ou tar.gz) contient le répertoire de la solution <strong>NetduinoI2CLCD</strong> composée : </p>
 <ul>
-	<li>Du projet <strong>I2CLCD </strong> : le code de la classe <em>I2CLCD</em>.</li>
+	<li>Du projet <strong>I2CLCD </strong> : le code de la classe <em>I2CLcd</em>.</li>
 	<li>Du projet <strong>TestI2CLCD </strong>: un exemple d'utilisation de cette classe.</li>
 </ul>
 <hr/>
 <p><strong>Utilisation</strong></p>
 <hr>
 <ol>
-	<li><strong>Ajouter</strong> la référence<strong> LCDI2C</strong> et l'espace de nom <strong>ToolBoxes </strong>dans le projet.</li>
+	<li><strong>Ajouter</strong> le(s) assembly(s) dans le répertoire <em>référence</em>référence du projet et l'espace de nom <strong>ToolBoxes </strong>dans le projet.</li>
 	<li><strong>Créer</strong> un objet en utilisant un des constructeurs <em>I2CLcd</em>.</li>
 	<li><strong>Initialiser</strong> le LCD avec la méthode <em>Init</em>.</li>
 	<li><strong>Effacer l'écran</strong> avec la méthode <em>ClearScreen</em>.</li>
