--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <hr/>
 <p><strong>Utilisation</strong></p>
 <ol>
-	<li><strong>Ajouter</strong> le(s) assembly(s) dans le répertoire <em>référence</em> du projet et l'espace de nom <strong>ToolBoxes </strong>dans l'en-tête du fichier source.</li>
+	<li><strong>Ajouter</strong> le(s) assembly(s) dans le répertoire <em>référence</em> du projet et l'espace de noms <strong>ToolBoxes </strong>dans l'en-tête du fichier source.</li>
 	<li><strong>Créer</strong> un objet en utilisant un des constructeurs <em>I2CLcd</em>.</li>
 	<li><strong>Initialiser</strong> le LCD avec la méthode <em>Init</em>.</li>
 	<li><strong>Effacer l'écran</strong> avec la méthode <em>ClearScreen</em>.</li>
