--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
 	<li><strong>Distributeurs</strong> : <a href="http://www.mouser.fr/Search/Refine.aspx?Keyword=netduino" target="_blank">Mouser Electronics</a></li>
 </ul>
 <hr/>
+<h3>>Wiki</h3>
+<ul>
+	<li><strong>Netduino sur Wikispaces: <a href="https://csharpembarquenetduino.wikispaces.com/" target="_blank">lien</a></strong></li>
+</ul>
+<hr>
 <h3>Classe I2CLCD</h3>
 <ul>
 	<li><strong>Rôle: </strong>Contrôle un afficheur à PCF2119 via un bus I²C.</li>
