--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	<li><strong>Distributeurs</strong> : <a href="http://www.mouser.fr/Search/Refine.aspx?Keyword=netduino" target="_blank">Mouser Electronics</a></li>
 </ul>
 <hr/>
-<h3>>Wiki</h3>
+<h3>Wiki</h3>
 <ul>
 	<li><strong>Netduino sur Wikispaces: <a href="https://csharpembarquenetduino.wikispaces.com/" target="_blank">lien</a></strong></li>
 </ul>
