--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <hr/>
 <h3>Wiki</h3>
 <ul>
-	<li><strong>Netduino sur Wikispaces: <a href="https://csharpembarquenetduino.wikispaces.com/" target="_blank">lien</a></strong></li>
+	<li><strong>Exemple pour la carte Netduino sur Wikispaces: <a href="https://csharpembarquenetduino.wikispaces.com/" target="_blank">lien</a></strong></li>
 </ul>
 <hr>
 <h3>Classe I2CLCD</h3>
