--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </ul>
 <hr/>
 <h3>IHM SSI</h3>
-<p>L'<strong>I</strong>nterface <strong>H</strong>omme <strong>M</strong>achine <strong><a href="https://webge.github.io/PCF8574/" target="_blank">SSI</a></strong> se compose :</p>
+<p>L'<strong>I</strong>nterface <strong>H</strong>omme <strong>M</strong>achine <strong><a href="https://webge.github.io/IHMSSI/" target="_blank">SSI</a></strong> se compose :</p>
 	<ul>
 		<li>d'un afficheur I²C 2x16 (MIDAS ou BATRON) à PCF2119,</li>
 		<li>de huit leds et de huit boutons-poussoir connectés à deux <a href="https://webge.github.io/PCF8574/" target="_blank">PCF8574</a>.</li>
